# robotic_arena_ws

ROS/: README.md
ROS/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ROS/devel/include/dac_modules/: discrete_action.h
ROS/devel/include/robots_msg/: DiscreteAction.h  arm_msg.h  armpap_msg.h  armpap_msgs.h  camera.h  cmd_msg.h  cmd_msgs.h  cmd_robot_msg.h  color_detected.h  continuous_action.h  discrete_action.h  eco_msg.h  eco_msgs.h  jevois.h  lidar.h  motor.h  plat.h  platform.h  resource.h  tanke_msg.h  tanke_msgs.h  target_data.h  xl320.h
ROS/devel/lib/pkgconfig/: arena_msgs.pc  cam_wifi.pc  cameras_input.pc  cognitive_module.pc  dac_experiments.pc  dac_modules.pc  eco02_dac_new.pc  gradients_env.pc  m5_wifi.pc  resource_envs.pc  resources_env.pc  robot_control.pc  robots_control.pc  robots_msg.pc  vision_input.pc
ROS/devel/lib/vision_input/: basic_imgreceiver.py  basic_imgsender.py  vision_input
ROS/src/: README.md
ROS/src/cameras_control/: ._CMakeLists.txt  ._package.xml  CMakeLists.txt  package.xml
ROS/src/cameras_control/.ipynb_checkpoints/: combine_data-checkpoint.ipynb  combine_inputs-checkpoint.ipynb  debug_cameras-checkpoint.ipynb
ROS/src/cameras_control/scripts/: ._arena_capture.py  ._aruco.py  ._eco_reader.py  ._image_receiver.py  ._robots_capture.py  ._utils.py  ._video_capture.py  arena_capture.py  aruco.py  robot_capture.py  video_capture.py
ROS/src/cameras_ctrl/: CMakeLists.txt  combine_inputs.ipynb  package.xml
ROS/src/dac_exps/: CMakeLists.txt  package.xml
ROS/src/dac_modules/: CMakeLists.txt  package.xml
ROS/src/env_inputs/: CMakeLists.txt  package.xml
ROS/src/exps_launch/: CMakeLists.txt  package.xml
ROS/src/robots_control/: ._CMakeLists.txt  ._package.xml  CMakeLists.txt  package.xml
ROS/src/robots_control/scripts/: ._eco_controller.py  ._robots_class.py  eco_controller.py  robots_class.py
ROS/src/robots_ctrl/: CMakeLists.txt  package.xml
ROS/src/robots_msg/: CMakeLists.txt  package.xml
ROS/src/robots_msg/msg/: armpap_msgs.msg  camera.msg  discrete_action.msg  eco_msgs.msg  jevois.msg  lidar.msg  motor.msg  plat.msg  resource.msg  robot_pose.msg  tanke_msgs.msg  target.msg  target_data.msg
(+290 files in other folders)
